--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -29,6 +29,9 @@
         transition: transform 0.35s ease;
         z-index: 0;
       }
+      @include md {
+        background: white;
+      }
 
       > * {
         position: relative;
@@ -47,25 +50,46 @@
   &__logo {
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
+    justify-content: flex-start;
     max-width: 24rem;
+    width: 100%;
     background-color: white;
     height: 8rem;
-    border-radius: 0 0 50px 0;
-    padding: 1.3rem 1.5rem 1.8rem;
+    padding-right: 5.5rem;
+    flex-shrink: 1;
+    --r: clamp(18px, 2.2vw, 32px);
+    clip-path: shape(
+      from 0 0,
+      hline to 100%,
+      arc by calc(-1 * var(--r)) var(--r) of var(--r),
+      vline to calc(100% - var(--r)),
+      arc by calc(-1 * var(--r)) var(--r) of var(--r) cw,
+      hline to 0,
+      close
+    );
+    @include md {
+      max-width: unset;
+      height: 50px;
+      padding-right: 3.5rem;
+      padding-left: 1.5rem;
+    }
     img {
         width: 20.2rem;
+        max-width: 100%;
         height: 100%;
         object-fit: contain;
+        @include md {
+          width: 143.5px;
+          height: 35px;
+        }
     }
   }
-
   &__actions {
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: relative;
+    flex-shrink: 0;
     padding-right: 7.1rem;
     gap: 2.4rem;
     @include md {
