--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -17,6 +17,7 @@
         @include md {
             padding: 7.5rem 2rem 3rem 2rem;
             flex-direction: column;
+            border-radius: 30px 30px 0 0;
         }
 
         &::after {
@@ -807,8 +808,11 @@
         &-head {
             display: grid;
             grid-template-columns: 62px 1fr;
-            gap: 2rem;
+            gap: 2.1rem;
             align-items: flex-end;
+            @include md {
+                align-items: center;
+            }
         }
     }
 
@@ -1623,10 +1627,20 @@
     }
 
     &__step {
-        position: relative;
-        z-index: 3;
+        position: sticky;
+        top: calc(8rem + var(--stack-offset, 0rem));
+        z-index: var(--stack-index, 3);
+        margin-bottom: 14rem;
+        transform-origin: top center;
+
+        &:nth-of-type(1) {
+            --stack-index: 1;
+            --stack-offset: 0rem;
+        }
 
         &:nth-of-type(2) {
+            --stack-index: 2;
+            --stack-offset: 2.4rem;
 
             .asset-steps__step-head,
             .asset-steps__step-body {
@@ -1648,6 +1662,9 @@
         }
 
         &:nth-of-type(3) {
+            --stack-index: 3;
+            --stack-offset: 4.8rem;
+            margin-bottom: 0;
 
             .asset-steps__step-head,
             .asset-steps__step-body {
@@ -1670,8 +1687,18 @@
             }
         }
 
+        @include md {
+            position: relative;
+            top: auto;
+            margin-bottom: 4rem;
+
+            &:nth-of-type(3) {
+                margin-bottom: 0;
+            }
+        }
+
         &-title {
-            padding-left: 22rem;
+            padding-left: 2rem;
             color: #003d3d;
             font-size: 2.4rem;
             font-weight: 700;
@@ -1700,20 +1727,14 @@
         position: relative;
         display: flex;
         align-items: center;
-        gap: 0;
-        padding: 2.5rem;
         background: linear-gradient(to left,
                 rgba(81, 221, 219, 1) 0%,
                 rgba(0, 195, 194, 1) 100%);
-
     }
 
     &__label {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 22rem;
-        height: 9.6rem;
+        width: 21rem;
+        height: 9rem;
         background: #fff;
         color: #008080;
         display: flex;
@@ -1722,7 +1743,21 @@
         font-family: "Oswald", sans-serif;
         font-size: 5rem;
         font-weight: 700;
-        border-radius: 0 0 5rem 0;
+        position: relative;
+        z-index: 1;
+        margin-bottom: -1px;
+        margin-top: -1px;
+        --r: clamp(18px, 2.2vw, 32px);
+        clip-path: shape(
+          from 0 0,
+          hline to 100%,
+          arc by calc(-1 * var(--r)) var(--r) of var(--r),
+          vline to calc(100% - var(--r)),
+          arc by calc(-1 * var(--r)) var(--r) of var(--r) cw,
+          hline to 0,
+          close
+        );
+        padding-right: 1.5rem;
     }
 
     &__step-body {
